--- a/SQLite/app/src/main/res/layout/activity_main.xml
+++ b/SQLite/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.488" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/insertBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
@@ -52,7 +52,7 @@
         app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/insertBtn" />
 
     <Button
         android:id="@+id/deleteBtn"
@@ -71,8 +71,8 @@
 
     <Button
         android:id="@+id/viewBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="39dp"
+        android:layout_height="3dp"
         android:layout_marginStart="159dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="161dp"
